框架主要功能开发